--- a/src/app/client/pages/servicios/servicios.component.html
+++ b/src/app/client/pages/servicios/servicios.component.html
@@ -6,7 +6,7 @@
 
   <div class="servicios__content servicios__content--destacado">
 
-  <p-image width="420"  data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/excavaciones.jpg" alt="Image"></p-image>
+  <img data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/excavaciones.jpg" alt="Image">
 
   <div data-aos="fade-left" data-aos-duration="1000" class="servicios__info">
     <h2 class="servicios__title"> EXCAVACIONES </h2>
@@ -22,7 +22,7 @@
 
   <div class="servicios__content servicios__content--normal">
 
-    <div data-aos="fade-right" data-aos-duration="1000" class="servicios__info" >
+    <div data-aos="fade-right" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> FUNDACIONES </h2>
 
       <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Superficiales o directas </p>
@@ -32,13 +32,13 @@
 
     </div>
 
-      <p-image width="420" data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/fundaciones.jpg" alt="Image"></p-image>
+      <img data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/fundaciones.jpg" alt="Image">
 
   </div>
 
   <div class="servicios__content servicios__content--destacado">
 
-    <p-image width="420" data-aos="fade-right"  data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/hormigon-armado.jpg" alt="Image"></p-image>
+    <img data-aos="fade-right"  data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/hormigon-armado.jpg" alt="Image">
 
     <div data-aos="fade-left"  data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> HORMIGÓN ARMADO </h2>
@@ -66,14 +66,14 @@
     </div>
 
 
-    <p-image width="420" data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/caminos.jpg" alt="Image"></p-image>
+    <img data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/caminos.jpg" alt="Image">
 
 
   </div>
 
   <div class="servicios__content servicios__content--destacado">
 
-    <p-image width="420" data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/desagues.jpg" alt="Image"></p-image>
+    <img data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/desagues.jpg" alt="Image">
 
     <div data-aos="fade-left" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> DESAGUES </h2>
@@ -91,7 +91,7 @@
   <div class="servicios__content servicios__content--normal">
 
     <div data-aos="fade-right" data-aos-duration="1000" class="servicios__info">
-      <h2 class="servicios__title"> INGENIERÍA BÁSICA Y DE DETALLE </h2>
+      <h2 class="servicios__title"> INGENIERÍA BÁSICA </h2>
 
       <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Viabilidad del proyecto </p>
       <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Alternativas y estimación de costos </p>
@@ -100,13 +100,13 @@
 
     </div>
 
-    <p-image width="420" data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/ingenieria-basica-detalle.jpg" alt="Image"></p-image>
+    <img data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/ingenieria-basica-detalle.jpg" alt="Image">
 
   </div>
 
   <div class="servicios__content servicios__content--destacado">
 
-    <p-image width="420" data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/obras-industriales.jpg" alt="Image"></p-image>
+    <img data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/obras-industriales.jpg" alt="Image">
 
     <div data-aos="fade-left" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> OBRAS INDUSTRIALES </h2>
@@ -124,7 +124,7 @@
   <div class="servicios__content servicios__content--normal">
 
     <div data-aos="fade-right" data-aos-duration="1000" class="servicios__info">
-      <h2 class="servicios__title"> OBRAS DE ARQUITECTURA </h2>
+      <h2 class="servicios__title"> ARQUITECTURA </h2>
 
       <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Residencial </p>
       <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Comercial </p>
@@ -133,13 +133,13 @@
 
     </div>
 
-    <p-image width="420" data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/obras-arquitectura.jpg" alt="Image"></p-image>
+    <img data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/obras-arquitectura.jpg" alt="Image">
 
   </div>
 
   <div class="servicios__content servicios__content--destacado">
 
-    <p-image width="420" data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/mantenimiento.jpg" alt="Image"></p-image>
+    <img data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/mantenimiento.jpg" alt="Image">
 
     <div data-aos="fade-left" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> MANTENIMIENTO </h2>
