--- a/src/app/client/pages/servicios/servicios.component.scss
+++ b/src/app/client/pages/servicios/servicios.component.scss
@@ -1,9 +1,10 @@
-$color-background: #5ad8fe65;
+$color-background: #63c8e765;
 
 .servicios {
   &__content {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     flex-wrap: wrap;
     padding-top: 7rem;
     padding-bottom: 7rem;
@@ -30,7 +31,11 @@ $color-background: #5ad8fe65;
     margin-bottom: 0.5rem;
   }
 
-
+  &__image {
+    width: 30rem;
+    border-radius: 0.3rem;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  }
 
 
 }
