--- a/src/styles.scss
+++ b/src/styles.scss
@@ -319,14 +319,16 @@ h1 {
 
   .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-icon {
     color: #3fd4f5;
-    font-size: 1.3rem;
+    font-size: 1rem;
+    margin-right: 1rem;
   }
 
   .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-text {
     color: white;
     font-family: kanit-light;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     transform-origin: center;
+    width: 7rem;
   }
 
   .p-menuitem > .p-menuitem-content .p-menuitem-link:hover {
