--- a/src/app/client/shared/navbar/navbar.component.scss
+++ b/src/app/client/shared/navbar/navbar.component.scss
@@ -10,6 +10,7 @@ img {
 input {
   width: 12rem;
   height: 2rem;
+  margin-bottom: 0.3rem;
   color: black;
   border-radius: 1rem;
   @media screen and (max-width: 1400px) {
