--- a/src/styles.scss
+++ b/src/styles.scss
@@ -264,8 +264,9 @@ h1 {
   }
 
   .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-link {
-    margin-left: 1rem;
+    margin-left: 2rem;
     margin-top: 2rem;
+    margin-bottom: 0.3rem;
     -webkit-user-select: none;
     user-select: none;
 
