--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -1596,14 +1596,13 @@
     background: white;
     /* width: 18px;
     height: 18px; */
-    width: 1.25rem;
-    height: 1.25rem;
+    width: 1.15rem;
+    height: 1.15rem;
     color: rgba(255, 255, 255, 0.87);
     border-radius: 50%;
     transition: background-color 0.15s, border-color 0.15s, box-shadow 0.15s;
+
     @media screen and (max-width: 1600px) {
-      /* width: 15px;
-      height: 15px; */
       margin-top: 0.08rem !important;
     }
 
@@ -1628,8 +1627,8 @@
     box-shadow: 0 0 0 1px #f0e6f5;
   }
   .p-radiobutton .p-radiobutton-box .p-radiobutton-icon {
-    width: 12px;
-    height: 12px;
+    width: 100%;
+    height: 100%;
     transition-duration: 0.15s;
     background-color: #151515;
   }
