--- a/src/app/client/pages/contacto/contacto.component.html
+++ b/src/app/client/pages/contacto/contacto.component.html
@@ -107,7 +107,8 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7889.605351467845!2d-61.96701362981567!3d-33.75626155555726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c87b487979cc21%3A0x6ccc11578cb91bd7!2sTucum%C3%A1n%20555%2C%20Venado%20Tuerto%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1710996967871!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
 
- <p-scrollTop />
+  <p-scrollTop />
+  <app-whatsapp-button />
 
 </div>
 
