--- a/src/app/client/components/whatsapp-button/whatsapp-button.component.scss
+++ b/src/app/client/components/whatsapp-button/whatsapp-button.component.scss
@@ -23,7 +23,8 @@
   width: 100%;
   height: 100%;
   background-color: green;
-  opacity: 0.7;
+  opacity: 0.6;
+  transition: 0.5s ease;
   border-radius: 50%;
 }
 
